# libmemcpy

./: .gitignore  CMakeLists.txt  README.md  cpu.c  fetch_impls.sh  generate.py  generate_mingw_shim.py  libmemcpy.h  simplify_asm.py
.github/workflows/: build.yml  update-memcpy.yml
examples/: CMakeLists.txt  bench.c  detect.c
impls/: memcpy-ssse3-back.S  memcpy-ssse3.S  memmove-avx-unaligned-erms-rtm.S  memmove-avx-unaligned-erms-rtm.s  memmove-avx-unaligned-erms.S  memmove-avx-unaligned-erms.s  memmove-avx512-no-vzeroupper.S  memmove-avx512-no-vzeroupper.s  memmove-avx512-unaligned-erms.S  memmove-avx512-unaligned-erms.s  memmove-erms.s  memmove-evex-unaligned-erms.S  memmove-evex-unaligned-erms.s  memmove-sse2-unaligned-erms.S  memmove-sse2-unaligned-erms.s  memmove-ssse3-back.S  memmove-ssse3.s
include/: libmemcpy.h
src/: cpu.c  mingw-shim.s  names-memcpy.c  select.h
